// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManuList with horizontal props Should match snapshot 1`] = `
.c0 {
  list-style-type: none;
  margin: 0 0 0 50px;
  padding: 0;
}

.c0 li {
  float: left;
  margin: 0 10px;
}

<ul
  className="c0"
/>
`;

exports[`ManuList without props Should match snapshot 1`] = `
.c0 {
  list-style-type: none;
  margin: 60px 0 0 50px;
  padding: 0;
}

<ul
  className="c0"
/>
`;
